crates/module-graph/tests/snapshots/js_test__cjs__module_exports.snap
---
source: crates/module-graph/tests/js_test.rs
expression: "generate_graph_for_file(sandbox.path(), \"cjs/module-exports.cjs\")"
---
{
    1: Module {
        exports: [
            Export {
                kind: Legacy,
                module_id: None,
                source: None,
                span: Some(
                    Span {
                        start: 0,
                        end: 19,
                    },
                ),
                symbols: [
                    ExportedSymbol {
                        kind: Default,
                        symbol_id: None,
                        name: "default",
                    },
                ],
                type_only: false,
            },
        ],
        fragment: None,
        id: 1,
        imports: [],
        package_name: None,
        path: "/root/cjs/module-exports.cjs",
        query: None,
        source: JavaScriptModule {
            package_type: Unknown,
            source: "module.exports = {};\n",
            source_type: SourceType {
                language: JavaScript,
                module_kind: Module,
                variant: Jsx,
                always_strict: false,
            },
            stats: JavaScriptStats {
                dynamic_import_count: 0,
                export_statements: 0,
                exports_default: true,
                import_statements: 0,
                other_statements: 1,
                require_count: 0,
            },
        },
    },
}
