crates/module-graph/tests/snapshots/js_test__cjs__module_exports_ref.snap
---
source: crates/module-graph/tests/js_test.rs
expression: "generate_graph_for_file(sandbox.path(), \"cjs/module-exports-ref.cjs\")"
---
{
    1: Module {
        exports: [
            Export {
                kind: Legacy,
                module_id: None,
                source: None,
                span: Some(
                    Span {
                        start: 20,
                        end: 42,
                    },
                ),
                symbols: [
                    ExportedSymbol {
                        kind: Default,
                        symbol_id: None,
                        name: "value",
                    },
                ],
                type_only: false,
            },
        ],
        fragment: None,
        id: 1,
        imports: [],
        package_name: None,
        path: "/root/cjs/module-exports-ref.cjs",
        query: None,
        source: JavaScriptModule {
            package_type: Unknown,
            source: "const value = 123;\n\nmodule.exports = value;\n",
            source_type: SourceType {
                language: JavaScript,
                module_kind: Module,
                variant: Jsx,
                always_strict: false,
            },
            stats: JavaScriptStats {
                dynamic_import_count: 0,
                export_statements: 0,
                exports_default: true,
                import_statements: 0,
                other_statements: 2,
                require_count: 0,
            },
        },
    },
}
